--- a/Readme
+++ b/Readme
@@ -10,6 +10,7 @@ Clear all student records
 Save student data to a CSV file
 Load student data from a CSV file
 Display student data in a formatted table
+
 Requirements
 Python 3.x
 prettytable library
@@ -17,7 +18,27 @@ prettytable library
 Code Structure
 main.py: The main script that runs the application.
 students.csv: The CSV file used to store student data.
+
+Usage
+Start the application:
+Run the main.py file using Python:
+Add a new student:
+Select option 1 to add a new student. Enter the required details (first name, last name, patronymic, scholarship status, IIN, group, and address).
+
+Edit an existing student:
+Select option 2 and specify the index of the student record you want to edit. Enter the updated details.
+
+Delete a student:
+Select option 3 and specify the index of the student record you want to delete.
+
+Clear all student records:
+Select option 4 to clear all student records. Confirm your action when prompted.
+
+Exit the application:
+Select option 0 to exit the application. Any changes will be saved to the CSV file before exiting.
+
 Functions
+
 addStudent(lst: list)
 Prompts the user to enter the details of a new student and adds the student to the list.
 
